--- a/templates/page.html
+++ b/templates/page.html
@@ -282,7 +282,7 @@
 <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script>
 
 <!-- Babel-standalone -->
-<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/7.20.2/babel.min.js"></script> -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/7.20.2/babel.min.js"></script>
 
 <!-- Klarscript, executes when page is loaded. -->
 <script>
