--- a/templates/blocks/react.html
+++ b/templates/blocks/react.html
@@ -1,6 +1,6 @@
 <section id="{{block_id}}" class="{{template_id}} block"></section>
 
-<script>
+<script type="text/babel">
 function KlarBlock({heading, subHeading, image, team, text}) {
   return (
     <Block>
