--- a/templates/page.html
+++ b/templates/page.html
@@ -263,10 +263,10 @@
   <![endif]-->
 </head>
 <body id="page-top" class="index">
-<div class="left"><!-- klar_content_full --></div>
-<div class="left"><!-- klar_content_aside --></div>
-<div class="right"><!-- klar_content_main --></div>
-<div class="full"><!-- klar_content --></div>
+<div class="left"><!-- klar-content-full --></div>
+<div class="left"><!-- klar-content-aside --></div>
+<div class="right"><!-- klar-content-main --></div>
+<div class="full"><!-- klar-content --></div>
 
 <!-- jQuery -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
