--- a/templates/blocks/react.html
+++ b/templates/blocks/react.html
@@ -1,6 +1,5 @@
-<section id="{{block_id}}" class="{{template_id}} block"></section>
-
 <script type="text/babel">
+document.write('<section id="{{block_id}}" class="{{template_id}} block"></section>');
 function KlarBlock({heading, subHeading, image, team, text}) {
   return (
     <Block>
