--- a/templates/page.html
+++ b/templates/page.html
@@ -280,6 +280,7 @@
 <!-- Test with React Klar Blocks -->
 <script crossorigin src="https://unpkg.com/react@18/umd/react.production.min.js"></script>
 <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/react-dom-server@0.0.5/lib/ReactDOMServer.min.js"></script>
 
 <!-- Babel-standalone -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/7.20.2/babel.min.js"></script>
