--- a/templates/blocks/about.html
+++ b/templates/blocks/about.html
@@ -47,9 +47,7 @@
           {% endfor %}
           <li>
 						<div class="timeline-image">
-							<h4>Be Part
-							<br>Of Our
-							<br>Story!</h4>
+							<h4>{{ timeline_end_text }}</h4>
 						</div>
 					</li>
         </ul>
