--- a/templates/blocks/about.html
+++ b/templates/blocks/about.html
@@ -47,7 +47,7 @@
           {% endfor %}
           <li>
 						<div class="timeline-image">
-							<h4 data-field-text="timeline_end_text">{{ block.timeline_end_text }}</h4>
+							<h4 data-field-string="timeline_end_text">{{ block.timeline_end_text }}</h4>
 						</div>
 					</li>
         </ul>
