--- a/templates/blocks/team2_functioning.html
+++ b/templates/blocks/team2_functioning.html
@@ -1,4 +1,4 @@
-<!-- Team2 Section -->
+<!-- TeamReact Section -->
 <section id="{{block_id}}" class="{{template_id}} block">
   Snart kommer innehållet!
 <div>
