--- a/templates/page-react.html
+++ b/templates/page-react.html
@@ -289,7 +289,7 @@
 <!-- Klar React Site - version: 0.0.0 -->
 <script src="blocks/navigation2.js" type="text/babel" data-presets="react"></script>
 <script src="blocks/header2.js" type="text/babel" data-presets="react"></script>
-<script src="blocks/team2.js" type="text/babel" data-presets="react"></script>
+<script src="blocks/TeamReact.js" type="text/babel" data-presets="react"></script>
 <script src="app.js" type="text/babel" data-presets="react"></script>
 
 <!-- Klarscript, executes when page is loaded. -->
