--- a/templates/page-react.html
+++ b/templates/page-react.html
@@ -287,8 +287,8 @@
 <!-- Babel-standalone - version: 7.20.2 -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/7.20.2/babel.min.js"></script>
 <!-- Klar React Site - version: 0.0.0 -->
-<script src="blocks/navigation2.js" type="text/babel" data-presets="react"></script>
-<script src="blocks/header2.js" type="text/babel" data-presets="react"></script>
+<script src="blocks/NavigationReact.js" type="text/babel" data-presets="react"></script>
+<script src="blocks/HeaderReact.js" type="text/babel" data-presets="react"></script>
 <script src="blocks/TeamReact.js" type="text/babel" data-presets="react"></script>
 <script src="app.js" type="text/babel" data-presets="react"></script>
 
