--- a/templates/page-react.html
+++ b/templates/page-react.html
@@ -278,18 +278,23 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
 
 <!-- Test with React Klar Blocks -->
-<!-- React - version: 18 -->
-<script crossorigin src="https://unpkg.com/react@18/umd/react.production.min.js"></script>
-<!-- React DOM - version: 18 -->
-<script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script>
-<!-- React Router DOM - version: 5.2.0 -->
+<script src="https://unpkg.com/react@18/umd/react.production.min.js"></script>
+<script src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script>
 <script src="https://unpkg.com/react-router-dom@5.2.0/umd/react-router-dom.min.js"></script>
-<!-- Babel-standalone - version: 7.20.2 -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/7.20.2/babel.min.js"></script>
-<!-- Klar React Site - version: 0.0.0 -->
+<script>
+  const {
+    BrowserRouter,
+    Switch,
+    Route,
+    Link,
+    useLocation
+  } = ReactRouterDOM;
+</script>
 <script src="blocks/NavigationReact.js" type="text/babel" data-presets="react"></script>
 <script src="blocks/HeaderReact.js" type="text/babel" data-presets="react"></script>
 <script src="blocks/TeamReact.js" type="text/babel" data-presets="react"></script>
+<script src="blocks/FooterReact.js" type="text/babel" data-presets="react"></script>
 <script src="app.js" type="text/babel" data-presets="react"></script>
 
 <!-- Klarscript, executes when page is loaded. -->
